--- a/css/default.css
+++ b/css/default.css
@@ -263,13 +263,13 @@
 	.button
 	{
 		display: inline-block;
-		padding: 1em 3em 1em 2em;
+		padding: 10px 15px;
 		letter-spacing: 0.20em;
 		text-decoration: none;
 		text-transform: uppercase;
 		font-weight: 400;
-		font-size: 0.90em;
-		color: #FFF;
+		font-size: 1em;
+		color: #1a4063;
 	}
 	
 	.button:before
@@ -318,7 +318,8 @@
 	.boxB,
 	.boxC
 	{
-		width: 320px;
+		width: 380px;
+
 	}
 
 	.boxA, .boxB{
@@ -359,7 +360,8 @@
 
 	.title
 	{
-		margin-bottom: 0.8em;
+		text-align: center;
+		margin-bottom: 5px;
 	}
 	
 	.title h2
@@ -370,7 +372,7 @@
 	
 	.title .byline
 	{
-		font-size: 1.3em;
+		font-size: 0.9em;
 		color: #6F6F6F;
 	}
 		
@@ -474,7 +476,9 @@
 
 	.breadcrumb{
 		font-size: 0.8em;
-		margin-bottom: 48px;
+		margin-bottom: 20px;
+		padding: 5px 0;		
+		border-bottom: 1px solid rgba(0,0,0,0.1);
 	}
 
 /*********************************************************************************/
@@ -495,6 +499,7 @@
 		background: #2a2a2a;
 	}
 
+
 /*********************************************************************************/
 /* Main                                                                          */
 /*********************************************************************************/
@@ -510,6 +515,24 @@
 		text-align: center;
 	}
 
+	#welcome {
+		text-align: left;
+	}
+	
+	#welcome h3 {
+		margin-top: 30px;
+	}
+
+	#welcome p {
+		line-height:1.5em;
+		font-size: 1em;
+		text-align: left;
+	}
+
+	.subtitle {
+		font-size: 1.2em;
+		color: #333;
+	}
 /*********************************************************************************/
 /* News                                                                          */
 /*********************************************************************************/
@@ -605,7 +628,7 @@
 	#copyright
 	{
 		overflow: hidden;
-		padding: 5em 0em;
+		padding: 5em 0em 0;
 		border-top: 1px solid rgba(0,0,0,0.08);
 	}
 	
@@ -636,3 +659,13 @@
 		color: #000;
 		background: red;
 	}
+
+/**********************************
+/* actions
+***********************************/
+.actions {
+	margin-bottom: 20px;
+}
+.actions li {
+	margin: 5px 0;
+}
