--- a/coursera_tasks/module2-solution/css/style.css
+++ b/coursera_tasks/module2-solution/css/style.css
@@ -15,18 +15,20 @@ section {
 
 h1 {
     text-align: center;
+    font-size:1.75em;
 }
 
 p {
     background-color: #aaa;
-    border: 2px solid #000;
+    border: 1px solid #000;
     padding: 35px 15px 15px;
 }
 
 p > span {
+    font-size: 1.25em;
     text-align:center;
     display:block;
-    border: 2px solid #000;
+    border: 1px solid #000;
     width: 100px;
     position: absolute;
     padding: 3px 10px;
