--- a/coursera_tasks/module2-solution/css/style.css
+++ b/coursera_tasks/module2-solution/css/style.css
@@ -16,6 +16,7 @@ section {
 h1 {
     text-align: center;
     font-size:1.75em;
+    color:#dcdcdc;
 }
 
 p {
@@ -50,7 +51,19 @@ p > span {
     
 }
 
+body {
+    background-color:#4b0082;
+}
 @media (min-width:992px){
+    body {
+        background-color:#556b2f;   
+    }
+    h1 {
+        color:#000;
+    }
+    p:nth-child(odd){
+        background-color:#a9a9a9;
+    }
     p > span {
         top: 16px;
         right:0px;
@@ -70,6 +83,16 @@ p > span {
 }
 
 @media (min-width:768px) and (max-width:991px){
+    body {
+        background-color: #00ffff;
+    }
+    h1 {
+        color:#000;
+    }
+    
+    p:nth-child(even){
+        background-color:#e9967a;
+    }
     p > span {
         top: 31px;
         right:15px;
