--- a/css/default.css
+++ b/css/default.css
@@ -28,7 +28,7 @@
 		margin-top: 0;
 	}
 	
-	ol, ul
+	 ul /* ol,*/
 	{
 		padding: 0;
 		list-style: none;
@@ -79,6 +79,7 @@
 	{
 		display: block;
 		width: 100%;
+		height: 300px;
 		margin: 0 0 2em 0;
 	}
 	
@@ -299,7 +300,7 @@
 	
 	.box1,
 	.box2,
-	.box3,
+	.box3
 	{
 		float: left;
 		margin-right: 20px;
@@ -529,6 +530,13 @@
 		text-align: left;
 	}
 
+	#welcome ul {
+		margin-left: 20px;
+		padding-left: 10px;
+		list-style-type:square;
+		line-height: 1.5em;
+	}
+
 	.subtitle {
 		font-size: 1.2em;
 		color: #333;
@@ -655,9 +663,9 @@
 
 	.fa
 	{
-		display: block;
+		//display: block;
 		color: #000;
-		background: red;
+		//background: red;
 	}
 
 /**********************************
